--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,29 @@
 .App {
   text-align: center;
 }
+.Login{
+  text-align: left;
+  padding: 1em;
+  margin: 1em;
+  border: 2px solid #d3d3d3;
+  border-radius: .5em;
+  vertical-align: middle;
+  margin-left: auto;
+  margin-right: auto;
+  width: 600px;
+  margin-top: 100px;
+}
+.form {
+  padding: 1em;
+}
+label {
+  display: flex;
+  font-weight: 600;
+}
 
+button {
+  justify-content: flex-end;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
